[gd_scene load_steps=2 format=3 uid="uid://d7k9m8v3x2nqr"]

[ext_resource type="Script" path="res://algorithms/datastructures/heap_operations/HeapOperations.gd" id="1_heap_ops"]

[node name="HeapOperations" type="Node3D"]
script = ExtResource("1_heap_ops")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866, 0, -0.866, 0.5, 0, 12, 8)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 15, 0)
light_energy = 1.5

[node name="HeapNodes" type="Node3D" parent="."]

[node name="HeapEdges" type="Node3D" parent="."]

[node name="HeapTypeIndicator" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 3, 0)
size = Vector3(1, 0.5, 0.3)

[node name="OperationIndicator" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 3, 0)
top_radius = 0.3
bottom_radius = 0.3
height = 0.5

[node name="HeapSizeIndicator" type="CSGSphere3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4, 0)
radius = 0.3
